--- a/NtApiDotNet/NtApiDotNet.csproj
+++ b/NtApiDotNet/NtApiDotNet.csproj
@@ -9,7 +9,7 @@
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>NtApiDotNet</RootNamespace>
     <AssemblyName>NtApiDotNet</AssemblyName>
-    <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v4.8</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <TargetFrameworkProfile />
   </PropertyGroup>
@@ -36,6 +36,12 @@
     <DocumentationFile>bin\Release\NtApiDotNet.XML</DocumentationFile>
     <Prefer32Bit>false</Prefer32Bit>
     <LangVersion>7.3</LangVersion>
+  </PropertyGroup>
+  <PropertyGroup>
+    <SignAssembly>true</SignAssembly>
+  </PropertyGroup>
+  <PropertyGroup>
+    <AssemblyOriginatorKeyFile>Authlogics.snk</AssemblyOriginatorKeyFile>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
@@ -1070,6 +1076,7 @@
     <Compile Include="Win32\Service\WnfServiceTriggerInformation.cs" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="Authlogics.snk" />
     <None Include="Readme.txt" />
   </ItemGroup>
   <ItemGroup />
